Fix sidebar head on desktop and improve now playing spacing

--- a/sass/partials/homepage.scss
+++ b/sass/partials/homepage.scss
@@ -155,6 +155,20 @@
 	}
 }
 
+.nowPlayingItem {
+	margin-bottom: 30px;
+
+	+ .white-popup + .white-popup + .nowPlayingItem {
+		margin-bottom: 0;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.nowPlayingItem {
+		margin: 0;
+	}
+}
+
 .nowPlayingHover {
 	margin-bottom: 40px;
 }
